# inferno-engineer

./: .gitignore  Cargo.toml  index.html
assets/: cgfile.cgs.ron  mapfile.map.ron  npcfile.npcs.ron
pkg/: LICENSE  README.md  gamelib.js
src/: canvas.rs  game_backend.rs  game_frontend.rs  game_map.rs  game_ui.rs  gameplay.rs  lib.rs  main.rs  tmp.rs
src/commands/: commands.rs  fireball.rs  help.rs  man.rs  mod.rs
src/npcs/: alice.rs  mod.rs
