[package]
name = "finalgame"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/toxicpie/inferno-engineer"
license = "MIT"

[[bin]]
name = "gamebin"
path = "src/main.rs"

[lib]
name = "gamelib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.9.1"
bevy_egui = "0.18.0"
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.60", features = ["Window"] }
